# Body-Movement-Assessment

./: .gitignore  .gitkeep  README.md  pyproject.toml
src/: cnn.py  constants.py  data.py  evaluate.py  model.py  status_mapping.py  train.py
